# iDaVIE---Team-Alpha

./: .gitignore  AI-USAGE-LOG.md  BUILD_TROUBLESHOOTING.md  CLAUDE.md  CONTEXT.md  Configure.ps1  LINUX_PORT.md  MICROKERNEL_ARCHITECTURE.md  PROGRESS.md  README.md  SPEC.md  SUBTEAM.md  combined-ai-log.md  github-onedrive-setup-guide.md  handoff.md  persistence_port_final.patch  team3-pitch-slides.pptx  test-diagram.puml
.claude/: _pdf2md.py  _pdfcheck.py
.claude/pdf-md/: BNCH-3.md  REQ2_NFR_Maintainability_Table.md  Req3 Long-Term Roadmap Drivers.md  SK_BNCH.md  SonarQube Baseline report.md
.deckbuild/: SubTeam5_Overview.pptx  build.js  package-lock.json
.github/workflows/: basic-ci.yml  ci.yaml  team5ci.yaml
Assets/: packages.config
Assets/Scenes/: ui.unity
Assets/Scripts/CatalogData/: CatalogDataSet.cs
Assets/Scripts/Editor/: FeatureVisualiserEditor.cs
Assets/Scripts/FeatureData/: Feature.UnityHelpers.cs  Feature.cs  FeatureAnchor.cs  FeatureCatalog.cs  FeatureColor.cs  FeatureMenuCell.cs  FeatureMenuController.cs  FeatureSet.cs  FeatureSetManager.cs  FeatureSetRenderer.cs  FeatureSetService.cs  FeatureStatistics.cs  FeatureSystemPort.cs  FeatureTable.cs  FeatureVisualiser.cs  IAstFrame.cs  ICoordinateTransformer.cs  IFeature.cs  IFeatureDirtyNotifier.cs  IFeaturePersistenceService.cs  IFeatureRenderer.cs  IFeatureSystemPort.cs  IVoTableExporter.cs  Ifeaturepersistanceservice.cs  Vec3.cs  VoTableExportService.cs
Assets/Scripts/Menu/: MomentMapMenuController.cs  QuickMenuController.cs  SpectralProfileHelper.cs
Assets/Scripts/Persistence/: PersistenceController.cs  UnityWorkspaceStateCollector.cs
Assets/Scripts/PluginInterface/: FitsReader.cs
Assets/Scripts/Tools/: CameraControllerTool.cs
Assets/Scripts/UI/: CanvassDesktop.cs
Assets/Scripts/VolumeData/: Config.cs  VolumeCommandController.cs  VolumeDataSet.cs  VolumeDataSetRenderer.cs  VolumeInputController.cs
Assignment-Docs/: iDaVIE_Refactoring_Assignment_FINAL_1.md
Data/SampleData/3d-Mapping-output/: xyz-test-1.json
Docs/: Daily Standup Notes.docx  SubTeam5_CK_Metrics.md  SubTeam5_Requirements.docx  ai-log.md
Docs/team-5/: Daily Standup Notes.docx  SubTeam5_Overview.pptx  SubTeam5_Requirements.docx  SubTeam5_Testing_Strategy.docx  Test_Strategy_FeatureDomain.docx  ai-log.md
Docs/team-5/UML Diagrams/: FeatureData(Refactored).puml
Docs/team-alpha/sprint_artefacts/: scrum-scrums-artefact2.md
ProjectSettings/: ProjectSettings.asset
Sub-Team-4-refactored-examples/koffiewinkel-refactored/: README.txt
ai-tool-log/: README.md  sub-team-1.md  sub-team-2.md  sub-team-3.md  sub-team-4.md  sub-team-5.md  sub-team-6.md  sub-team-7.md
diagrams/: architecture.puml  class-after.puml  class-before.puml  sequence-render-frame.puml  vdsr-dependencies.md  vdsr-dependencies.puml
docs/: ai-usage-log.md  design-document-summary.md  design-document.md  iDaVIE_Volume_Data_Refactoring_Test_Strategy.md  metrics-worksheet.md  rendering-layer-design.md  rendering_layer_design_document.md  requirements.md  revised_design_document.md  shader-asset-policy.md  standup notes.md  test-strategy.md  urp_hdrp_no-ops_analysis.md
docs/integration/: INTEGRATION.md  meeting-subteam4.md  meeting-subteam7.md  team7-persistence-contract.md
docs/sub-team-2/: test-strategy.md
docs/sub-team-6/: CanvassDesktop.md  README.md  ai-log-final.md  ai-log.md  backlog.csv  deliverables-checklist.md  gui-file-io-analysis.md  refactor.md  requirements.md  standups.md  static-analysis-report.md  test-strategy.md
docs/sub-team-6/adrs/: 0001-mvvm-split.md  0002-transport.md  0004-we1-file-tab-scope-boundary.md  0005-we2-debug-tab-scope-boundary.md
docs/sub-team-6/archived/: SK_BNCH.md  adr-009-audit.md  architecture.md  backlog.md  before-dependency-graph.puml  ndepend-baseline.md  requirements.md  role-log.md
docs/sub-team-6/deliverables/: BNCH-3.md  TEST-1.md  adr-009-audit.md  deliverables-checklist.md
docs/sub-team-6/explainer-docs/: AI-usage-explainer.md  (+3 more)
docs/subteam-1/: adr-log.md  asr.md
docs/team-5/: Daily Standup Notes.docx  DesignDocument.docx  SubTeam5_Requirements.docx  ai-log.md
docs/team-alpha/: ADR_Log_Improved.md  integration-risk-register.md  standups.md
docs/team3/: README.md  migration_plan.md  rendering_layer_design_document.md  rendering_requirements_condensed.md  testing-tools-guide.md
docs/team7/: Design document.md  Requirements Document.md  StandupsKanban.md  Sub-team Test Strategy_ Persistence Layer.md
docs/uml/: CanvassDesktop.puml  DesktopPaintController.puml  VolumeDataSet.puml  VolumeDataSetRenderer.puml  VolumeInputController.puml  client_server_bdd.puml  client_server_component.puml  overview.puml
findings/: FINDINGS-teammate1.md  FINDINGS-teammate2.md
kanban/: sprint1-snapshot.md
native_plugins_cmake/: CMakeLists.txt  ast_tool.cpp  ast_tool.h  data_analysis_tool.h  fits_reader.cpp  fits_reader.h
refactoring-examples/: Refactored Examples.csproj
refactoring-examples/stubs/: InverseMaskMode.cs  IsolateMaskMode.cs
refactoring-examples/subteam-1/: domain-model.md
standup/: standup-log.md
state-contracts/: data-io-state-contract.md  feature-state-contract.md.md  gui-state-contract.md  interaction-state-contract.md  rendering-state-contract.md
testBuild/iDaVIE_Data/: ScriptingAssemblies.json  app.info  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  resources.assets.resS
tests/: CMakeLists.txt  CodeScene_Report.md  DV8_Report.md  LAYOUT.md  NDepend_Report.md  README.md  SonarQube_Report.md  Understand_Report.md  iDaVIE_Architecture_Analysis.md  test_ast_tool.cpp  test_data_analysis_tool.cpp  test_fits_reader.cpp
tests/PersistenceTests/: MigrationCoordinatorTests.cs  SnapshotRingTests.cs  SnapshotSerializerTests.cs  WorkspaceStubFactoryTests.cs  WorkspaceValidatorTests.cs
tests/SubTeam5_Tests/: ScenarioTests.cs  StatisticsTests.cs  UnitTest1.cs
tools/: check_ck_metrics.py
(+2463 files in other folders)
